Update 1.1 ปรับ folder struture
